--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ color: rgba(250, 250, 250, 0.6);
     border-radius: 50%;
     background-color:#2c2c2e;
     fill: rgba(250, 250, 250, 0.6);
+    cursor: pointer;
 }
 .weather{
     margin-top: 40px;
@@ -83,6 +84,7 @@ h2{
     margin-top: 5px;
     margin-left: 10px 
 }
+
 .temp-content{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
