--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body{
     height: 100vh;
     margin: 0;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
-
     /* background: #2c2c2e; */
 }
 .waether-app-container{
@@ -13,9 +12,14 @@ body{
     padding: 46px;
     border-radius: 30px;
     width: 650px;
-    height: 450px;
+    height: 50px; 
     margin: 4em;
 }
+.expanded{
+  transition:  .5s ease-in-out 0s;
+  height: 450px; 
+}
+
 .search{
     display: flex;
     align-items: center;
@@ -56,7 +60,15 @@ color: rgba(250, 250, 250, 0.6);
 }
 .weather{
     margin-top: 40px;
+    /* transition: opacity 1s ease-in-out; */
+    opacity: 0;
 }
+.show{
+    opacity: 1;
+    transition: opacity .5s ease-in-out 0s;
+
+}
+
 h2{
     color: white;
     text-align: left;
@@ -166,3 +178,9 @@ h2{
     border-radius: 18px;
 
 }
+.loading{
+    display: none;
+    transition: opacity 1s ease-in-out;
+    
+}
+
