--- a/style.css
+++ b/style.css
@@ -5,15 +5,15 @@ body{
     height: 100vh;
     margin: 0;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
-    /* background: #2c2c2e; */
+    background: #2c2c2e;
 }
 .waether-app-container{
+    justify-content: center;
     background: #1c1c1e;
     padding: 46px;
     border-radius: 30px;
     width: 650px;
     height: 50px; 
-    margin: 4em;
 }
 .expanded{
   transition:  .5s ease-in-out 0s;
@@ -29,7 +29,6 @@ body{
     width: 100%;
 }
 .searchbar{
-    /* padding: 10px 20px; */
     padding: 0.8em;
     border: none;
     border-radius: 24px;
@@ -47,7 +46,6 @@ font-size: 15px;
 color: rgba(250, 250, 250, 0.6);
 }
 .search-btn{
-    /* margin-left:5px ; */
     margin: .5em;
     height: 2.5em;
     width: 2.5em;
@@ -60,7 +58,6 @@ color: rgba(250, 250, 250, 0.6);
 }
 .weather{
     margin-top: 40px;
-    /* transition: opacity 1s ease-in-out; */
     opacity: 0;
 }
 .show{
@@ -134,7 +131,6 @@ h2{
 }
 
 .future-forecast{
-    /* width: 100%; */
     background: #2c2c2e;
     height: 130px;
     margin-top: 50px;
